# Satellite-GS-QKD

./: DQL_test.ipynb  K_MAX_checkpoint.pkl  K_MAX_checkpoint_old.pkl  K_MAX_checkpoint_old_1hr.pkl  K_MAX_checkpoint_old_5min.pkl  OLD-hap-qkd-online-path-based-full-dynamic.ipynb  README.md  Untitled.ipynb  balloon_qnet_key_rate_analysis.md  data.py  era5_50hpa_hourly.nc  flight_data.csv  flight_data.ipynb  hap-qkd-offline.ipynb  hap-qkd-online-path-based-dynamic-NEW.ipynb  hap-qkd-online-path-based-dynamic-SIMPLE-NEW.ipynb  hap-qkd-online-path-based.ipynb  hap-qkd-online.ipynb  hap-qkd-skr-calc.ipynb  hap_qkd_trajectory_3d.eps  qkp_plot_data.pkl  qkp_plot_data_rnd.pkl  related_works.ipynb  skr_strato_data.pkl
balloon_qnet/: LICENSE  README.md  balloon_qnet.ipynb  pyproject.toml  transmittance_simulation.ipynb
balloon_qnet/.ipynb_checkpoints/: AOStudy-checkpoint.py  balloon_qnet-checkpoint.ipynb  transmittance_simulation-checkpoint.ipynb  transmittance_simulation-checkpoint.py
balloon_qnet/Plot files/: matplotlibrc  plotAO.py  plotHoriz.py  plotHorizW0.py  plotUplinkAO.py
balloon_qnet/Studies/: EntanglementStudy.py  HorizStudy.py  HorizW0Study.py  MDItest.py  UplinkStudy.py  W0study.py  trustedscenararchi2.py  untrustedscenararchi1.py  zenithStudy.py
balloon_qnet/balloon_qnet/: cn2.py  free_space_losses.py
balloon_qnet/data/: AOballoonMaxi.txt  AOballoonSimu10.txt  AOballoonSimu2.txt  AOballoonSimu3.txt  AOballoonSimu4.txt  AOballoonSimu5.txt  AOballoonSimu6.txt  AOballoonSimu7.txt  AOballoonSimu8.txt  AOballoonSimu9.txt  AOballoonTheo10.txt  AOballoonTheo2.txt  (+64 more)
(+492 files in other folders)
