[tool.poetry]
name = "balloon_qnet"
version = "1.0.0"
description = "Balloon-based quantum network simulator."
authors = ["Ilektra Karakosta-Amarantidou", "Raja Yehia", "Matteo Schiavon"]
packages = [{ include = "balloon_qnet" }]

[tool.poetry.dependencies]
setuptools = "^78.1.0"
python = ">=3.12.3"
numpy = "^2.2.4"
scipy = "^1.15.2"
matplotlib = "^3.10.1"
multiprocess = "^0.70.17"
pandas = "^2.2.3"
xarray = "^2025.3.1"
netsquid = { version = "*", source = "netsquid" }

[[tool.poetry.source]]
name = "netsquid"
url = "https://pypi.netsquid.org"
secondary = true 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
